# Agri-bot

./: .gitignore  FUTURE_PLAN.md  README.md  pyproject.toml  requirements.txt
data/: scraped_chunks.json
notebooks/: 02_Document_Processing.ipynb  03_RAG_Chain_Prototyping.ipynb  04_Final_RAG_Chain.ipynb.ipynb  05_document_processing2.ipynb  06_Final_chain.ipynb  08_langgraph.ipynb  agri_bot_flow  output.md  pdfreader.ipynb  rag2.ipynb  ragfusion.ipynb  scrapping.ipynb  webdriver.ipynb
rag_database/cd1665a2-ac17-4632-9b5e-c546206f9bf0/: index_metadata.pickle
src/: app.py  config.py  core.py  graph.py  logger.py
